# dive

./: .gitmodules  CMakeLists.txt  GEMINI.md  ba.sh  libarchive.cmake  trigger.sh
.github/workflows/: daily-build.yml
capture_service/: CMakeLists.txt  android_application.cc  android_trace_mgr.cc  command_utils_win32.cc  device_mgr.cc  device_mgr.h  dive_client_cli.cc  perfetto_trace.cc  perfetto_trace.h  server.h  service.cc  service.h  trace_mgr.cc  trace_mgr.h
capture_service/ipc/: capture_client.cpp  capture_client.h  capture_config.h  capture_service.cpp  capture_service.h  connection.cpp  connection.h  message.cpp  message.h  socket_connection.cpp  socket_connection.h
config/: cpm.rc  cpm.rc.back
dive_core/: CMakeLists.txt  command_hierarchy.cpp  shader_disassembly.h  shader_disassembly_dummy.cpp
layer/: CMakeLists.txt  layer_common.cc  layer_common.h  openxr_layer.cc  vk_layer_base.cc  vk_layer_impl.cc
network/: messages.cc  messages.h  tcp_client.h
plugins/: CMakeLists.txt
scripts/: build_android.bat  build_android.sh  build_grpc.sh
ui/: CMakeLists.txt  file_proxy.h  main_window.cpp  trace_window.cpp  trace_window.h
